--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,8 +59,15 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/colors/
+    - assets/images/app_icon/icon.png
+    - assets/images/family_members/
+    - assets/images/numbers/
+    - assets/sounds/colors/
+    - assets/sounds/family_members/
+    - assets/sounds/phrases/
+    - assets/sounds/numbers/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -74,10 +81,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: MFB
+      fonts:
+        - asset: fonts/Tajawal-Bold.ttf
+
+
+    - family: MFM
+      fonts:
+        - asset: fonts/Tajawal-Medium.ttf
+
+
+    - family: MFR
+      fonts:
+        - asset: fonts/Tajawal-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
