--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -49,8 +50,8 @@ flutter_launcher_icons:
   web:
     generate: true
     image_path: "assets/images/app_icon/icon.png"
-    background_color: "#hexcode"
-    theme_color: "#hexcode"
+    background_color: "#483228"
+    theme_color: "#483228"
   windows:
     generate: true
     image_path: "assets/images/app_icon/icon.png"
